[gd_scene load_steps=6 format=3 uid="uid://bcij8x3bbp6nk"]

[ext_resource type="Script" path="res://Scenes/UI/Scripts/TextBox.gd" id="1_fokmp"]
[ext_resource type="Texture2D" uid="uid://cds5k8d0cg8u1" path="res://Sprites/UI/dialogue_menu.png" id="2_3fh35"]
[ext_resource type="FontFile" uid="uid://b3i2mifyitbyd" path="res://Fonts/Comic Sans MS Pixel.ttf" id="3_26srf"]

[sub_resource type="Animation" id="Animation_e6qjo"]
resource_name = "appearance"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1dvi4"]
_data = {
"appearance": SubResource("Animation_e6qjo")
}

[node name="TextBox" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -25.0
offset_right = -1895.0
offset_bottom = -1048.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(25, 25)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_fokmp")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_3fh35")
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 24

[node name="DialogueLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
z_index = 4096
layout_mode = 2
theme_override_fonts/font = ExtResource("3_26srf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1dvi4")
}

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
